Fix alignment of inputs

--- a/main.css
+++ b/main.css
@@ -24,5 +24,6 @@ input {
     width: 100px;
     border: 1px solid #bbb;
     font-size: 1em;
-    padding: 6px 6px 6px 6px
+    padding: 6px 6px 6px 6px;
+    text-align:center;
 }
